--- a/smay_purchases_users/views/views.xml
+++ b/smay_purchases_users/views/views.xml
@@ -69,7 +69,7 @@
 
                     <field name="cantidad_lineas" readonly="True"/>
                     <field name="cantidad_productos" readonly="True"/>
-                    <!--<field name="analytic_account_select" options="{'no_create': True,'no_open':True}" groups="purchase.group_purchase_manager"/>-->
+                    <field name="analytic_account_select" options="{'no_create': True,'no_open':True}" groups="purchase.group_purchase_manager"/>
 
 
                 </xpath>
@@ -123,10 +123,10 @@
             <field name="groups_id" eval="[(6, 0, [ref('purchase.group_purchase_manager')])]"/>
             <field name="arch" type="xml">
 
-                <xpath expr="//field[@name='partner_ref']" position="after">
+                <!--<xpath expr="//field[@name='partner_ref']" position="after">
                     <field name="analytic_account_select" options="{'no_create': True,'no_open':True}"/>
 
-                </xpath>
+                </xpath>-->
 
                 <xpath expr="//field[@name='picking_type_id']" position="replace">
                     <field name="picking_type_id" readonly="False" domain="[('code','=','incoming')]"
