--- a/smay_purchases_users/views/views.xml
+++ b/smay_purchases_users/views/views.xml
@@ -124,7 +124,7 @@
             <field name="arch" type="xml">
 
                 <xpath expr="//field[@name='partner_ref']" position="after">
-                    <!--<field name="analytic_account_select" options="{'no_create': True,'no_open':True}"/>-->
+                    <field name="analytic_account_select" options="{'no_create': True,'no_open':True}"/>
 
                 </xpath>
 
