--- a/smay_purchases_users/views/views.xml
+++ b/smay_purchases_users/views/views.xml
@@ -6,7 +6,7 @@
             <field name="inherit_id" ref="base.view_users_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//notebook" position='inside'>
-                <!--<xpath expr="//group[@name='pos']" position="inside">-->
+                    <!--<xpath expr="//group[@name='pos']" position="inside">-->
                     <page string='Compras Super May'>
                         <group>
                             <field name="x_almacen_compras" options="{'no_create': True,'no_open':True}"/>
@@ -18,6 +18,7 @@
             </field>
         </record>
 
+
         <record id="view_company_form" model="ir.ui.view">
             <field name="name">res.company.form</field>
             <field name="model">res.company</field>
@@ -28,10 +29,6 @@
                 </xpath>
             </field>
         </record>
-
-
-
-
 
 
         <record model="ir.ui.view" id="purchase_order_form_inherited">
@@ -48,6 +45,8 @@
 
             </field>
         </record>
+
+
 
         <record model="ir.ui.view" id="purchase_order_form_inherited3">
             <field name="model">purchase.order</field>
@@ -70,8 +69,6 @@
                     <field name="cantidad_lineas" readonly="True"/>
                     <field name="cantidad_productos" readonly="True"/>
                     <!--<field name="analytic_account_select" options="{'no_create': True,'no_open':True}" groups="purchase.group_purchase_manager"/>-->
-
-
                 </xpath>
             </field>
 
@@ -87,8 +84,6 @@
             </field>
 
         </record>
-
-
 
 
         <record model="ir.ui.view" id="purchase_order_form_inherited">
@@ -138,11 +133,22 @@
         </record>
 
 
+        <!--<record model="ir.ui.view" id="product_template_form_view_inherited">
+            <field name="name">product.template.utility</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_form_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='list_price']" position="after">
+                    <field name="x_utility_percent"/>
+                </xpath>
+            </field>
+
+        </record>-->
 
         <record model="ir.ui.view" id="product_template_form_view_inherited">
             <field name="name">product.template.utility</field>
             <field name="model">product.template</field>
-            <field name="inherit_id" ref="product.product_template_form_view"/>
+            <field name="inherit_id" ref="product.product_template_only_form_view"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='list_price']" position="after">
                     <field name="x_utility_percent"/>
