--- a/smay_purchases_users/views/views.xml
+++ b/smay_purchases_users/views/views.xml
@@ -138,7 +138,7 @@
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_form_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='standard_price']" position="after">
+                <xpath expr="//field[@name='taxes_id']" position="after">
                     <field name="x_utility_percent"/>
                 </xpath>
             </field>
