--- a/smay_purchases_users/views/views.xml
+++ b/smay_purchases_users/views/views.xml
@@ -100,7 +100,7 @@
 
         </record>
 
-        <record model="ir.ui.view" id="purchase_order_form_inherited14">
+        <!--<record model="ir.ui.view" id="purchase_order_form_inherited14">
             <field name="model">purchase.order</field>
             <field name="inherit_id" ref="purchase.purchase_order_form"/>
             <field name="arch" type="xml">
@@ -109,7 +109,7 @@
                 </xpath>
             </field>
 
-        </record>
+        </record>-->
 
         <record model="ir.ui.view" id="purchase_order_form_inherited2">
             <field name="model">purchase.order</field>
