--- a/smay_purchases_users/views/views.xml
+++ b/smay_purchases_users/views/views.xml
@@ -51,10 +51,10 @@
             <field name="model">purchase.order</field>
             <field name="inherit_id" ref="purchase.purchase_order_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//header" position="inside">
+                <!--<xpath expr="//header" position="inside">
                     <button name="print_labels" type="object" string="Etiquetas cambio precio"
                             attrs="{'invisible':[('state','not in',('purchase','done'))]}" class="oe_highlight"/>
-                </xpath>
+                </xpath>-->
                 <xpath expr="//field[@name='product_id']" position="replace">
                     <field name="product_id"
                            options="{'no_create': True,'no_open':True}"
