--- a/smay_stock_transferences/views/views.xml
+++ b/smay_stock_transferences/views/views.xml
@@ -55,15 +55,10 @@
                            options="{'no_create': True,'no_open':True}"/>
                 </xpath>
 
-                <xpath expr="//field[@name='product_id']" position="replace">
+                <!--<xpath expr="//field[@name='product_id']" position="replace">
                     <field name="product_id" required="1"
                            attrs="{'readonly': ['|', ('state', '=', 'done'), ('move_id', '!=', False)]}"
                            options="{'no_create': True,'no_open':True}"/>
-                </xpath>
-
-                <!--<xpath expr="//button[@name='button_scrap']" position="replace">
-                    <button name="button_scrap" type="object" string="Scrap" attrs="{'invisible': [1,'=',1]}"/>
-
                 </xpath>-->
 
             </field>
@@ -103,12 +98,12 @@
                            options="{'no_create': True,'no_open':True}"/>
                 </xpath>
 
-                <xpath expr="//field[@name='product_id']" position="replace">
+                <!--<xpath expr="//field[@name='product_id']" position="replace">
                     <field name="product_id" required="1"
                            attrs="{'readonly': ['|', ('state', '=', 'done'), ('move_id', '!=', False)]}"
                            options="{'no_create': True,'no_open':True}"/>
                 </xpath>
-
+-->
                 <!--<xpath expr="//button[@name='button_scrap']" position="replace">
                     <button name="button_scrap" type="object" string="Scrap" attrs="{'invisible': [1,'=',1]}"/>
                 </xpath>-->
