--- a/smay_stock_transferences/views/views.xml
+++ b/smay_stock_transferences/views/views.xml
@@ -14,6 +14,7 @@
                             <!--<field name="stock_warehouse_id" options="{'no_create': True,'no_open':True}"/>-->
                             <field name="transfers_validator"/>
                             <field name="picking_type_id" options="{'no_create': True,'no_open':True}"/>
+							<field name="sucursal_transferencias_id" options="{'no_create': True,'no_open':True}"/>
                         </group>
                     </page>
                 </xpath>
