--- a/smay_custom_pos/views/views.xml
+++ b/smay_custom_pos/views/views.xml
@@ -250,6 +250,10 @@
                                         class="btn btn-primary" name="open_existing_session_cb" type="object">Establecer
                                     Fondo
                                 </button>
+                                <button t-if="record.current_session_state.raw_value === 'new_session' || record.current_session_state.raw_value === 'opening_control'"
+                                        class="btn btn-primary"
+                                        name="open_session_cb" type="object">Abrir Caja
+                                </button>
 
 
                             </div>
@@ -257,7 +261,7 @@
 
                                 <div t-if="record.last_session_closing_date.value" class="row">
                                     <div class="col-6">
-                                        <span>Last Closing Date</span>
+                                        <span>Ultima fecha de Cierre</span>
                                     </div>
                                     <div class="col-6">
                                         <span>
@@ -269,7 +273,7 @@
                                 <div t-if="record.last_session_closing_date.value"
                                      attrs='{"invisible": [("cash_control","=",False)]}' class="row">
                                     <div class="col-6">
-                                        <span>Cash Balance</span>
+                                        <span>Balance de Caja</span>
                                     </div>
                                     <div class="col-6">
                                         <span>
