--- a/smay_custom_pos/views/views.xml
+++ b/smay_custom_pos/views/views.xml
@@ -238,7 +238,7 @@
 
                                 <button t-if="record.current_session_state.raw_value === 'new_session' || record.current_session_state.raw_value === 'opening_control'"
                                         class="btn btn-primary"
-                                        name="open_session_cb" type="object">Establecer
+                                        name="open_existing_session_cb" type="object">Establecer
                                     Fondo
                                 </button>
 
@@ -248,7 +248,7 @@
                                 </button>
 
                                 <button t-if="!record.current_session_id.raw_value &amp;&amp; !record.pos_session_username.value"
-                                        class="btn btn-primary" name="open_existing_session_cb" type="object">Abrir Caja
+                                        class="btn btn-primary" name="open_session_cb" type="object">Abrir Caja
                                 </button>
 
 
