--- a/smay_custom_pos/views/views.xml
+++ b/smay_custom_pos/views/views.xml
@@ -66,6 +66,18 @@
             <field name="groups_id" eval="[(6,0,[ref('point_of_sale.group_pos_user')])]"/>
             <field name="arch" type="xml">
 
+                <xpath expr="//field[@name='user_id']" position="replace">
+                    <field name="user_id" readonly="1"/>
+                </xpath>
+
+                <xpath expr="//field[@name='config_id']" position="replace">
+                    <field name="config_id" readonly="1"/>
+                </xpath>
+
+                <xpath expr="//field[@name='user_id']" position="replace">
+                    <field name="user_id" readonly="1"/>
+                </xpath>
+
                 <xpath expr="//header" position="replace">
                     <header>
                         <button name="open_cashbox_pos" type="object" string="Asignar Fondo"
